core/unpackaged/main/default/objects/ZVC__CCI_Config__c/ZVC__CCI_Config__c.object-meta.xml
<CustomObject>
    <label>CCI Config</label>
    <nameField>
        <label>CCI Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CCI Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>