core/unpackaged/main/default/objects/ZVC__CCI_Config__c/fields/ZVC__AreaCodeConfig__c.field-meta.xml
<CustomField>
    <fullName>ZVC__AreaCodeConfig__c</fullName>
    <label>AreaCodeConfig</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>