core/unpackaged/main/default/objects/ZVC__CCI_Config__c/fields/ZVC__Click_To_Dial_Plugin_Class__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Click_To_Dial_Plugin_Class__c</fullName>
    <label>Click To Dial Plugin Class</label>
    <length>150</length>
    <type>Text</type>
</CustomField>