core/unpackaged/main/default/objects/ZVC__CCI_Config__c/fields/ZVC__HVS_Enable__c.field-meta.xml
<CustomField>
    <fullName>ZVC__HVS_Enable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HVS Enable</label>
    <type>Checkbox</type>
</CustomField>