core/unpackaged/main/default/objects/ZVC__CCI_Config__c/fields/ZVC__Omni_Channel_Setting__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Omni_Channel_Setting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Omni Channel Setting</label>
    <type>Checkbox</type>
</CustomField>