core/unpackaged/main/default/objects/ZVC__CCI_Config__c/fields/ZVC__Screen_Pop_Plugin__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Screen_Pop_Plugin__c</fullName>
    <label>Screen Pop Plugin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>