core/unpackaged/main/default/objects/ZVC__CCI_Config__c/fields/ZVC__Web_API_Key__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Web_API_Key__c</fullName>
    <label>Web API Key(Depracated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>