core/unpackaged/main/default/objects/ZVC__CCI_Config__c/fields/ZVC__Web_API_Security__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Web_API_Security__c</fullName>
    <label>Web API Security(Depracated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>